# cutil

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: util_functions.cmake
docs/: Doxyfile  index.rst
include/: btree.h  list.h  testing.h  trait.h  vector.h
include/ctest/: ctest.h
include/cutil/: allocator.h  btree.h  forward_list.h  heap.h  list.h  strbuf.h  trait.h  vector.h
src/: CMakeLists.txt  allocator.c  allocator_private.h  btree.c  btree_itr.c  btree_private.h  ctest.c  defs_private.h  forward_list.c  heap.c  heap_private.h  list.c  strbuf.c  testing.c  trait.c  vector.c  vector_private.h
test/: CMakeLists.txt  test_allocator.c  test_btree.c  test_btree_fixtures.c  test_btree_fixtures.h  test_btree_itr.c  test_btree_util.c  test_btree_util.h  test_forward_list.c  test_forward_list_itr.c  test_heap.c  test_heap_util.c  test_heap_util.h  test_list.c  test_list_itr.c  test_main.c  test_settings.c  test_settings.h  test_strbuf.c  test_suites.h  test_traits.c  test_vector.c
test/btree_data/: btree3_delete_first_leaf_node_merge_with_parent_result.txt  btree3_delete_second_leaf_node_merge_with_parent_result.txt  btree3_delete_simple_merge_and_reblance_root.txt  btree4_delete_interior.txt  btree4_delete_interior_result_2.txt  btree4_split_interior.txt  btree4_split_interior_push_up.txt  btree4_split_interior_push_up_result.txt  btree5_delete_and_combine.txt  btree5_delete_and_combine_final_result.txt  btree5_delete_and_combine_result.txt  btree5_delete_leaf_borrow_left.txt  btree5_delete_leaf_borrow_left_result.txt  btree5_delete_leaf_borrow_right_result.txt  btree5_delete_leaf_noborrow.txt  btree5_delete_leaf_noborrow_result.txt  btree5_split_interior_middle_result.txt  btree5_split_interior_right_result.txt  btree_split_interior_left.txt  btree_split_interior_left_result.txt  btree_split_interior_middle.txt  btree_split_interior_middle_result.txt  btree_split_interior_right.txt  btree_split_interior_right_result.txt
test/data/btree/: btree3_delete_leaf_simple.txt  btree3_leaf_delete_borrow_left.txt  btree3_leaf_delete_borrow_left_result.txt  btree3_leaf_delete_borrow_right.txt  btree3_leaf_delete_borrow_right_result.txt  btree4_delete_interior_result_1.txt  btree4_split_interior_left_result.txt  btree4_split_interior_middle_result.txt  btree4_split_interior_push_up.txt  btree4_split_interior_push_up_result.txt  btree4_split_interior_right_result.txt  btree4_split_leaf_new_root_result.txt  btree5_split_interior.txt  btree5_split_interior_left_result.txt  btree5_split_leaf_new_root_result.txt
test/test_util/: defs.h  trait_tracker.c  trait_tracker.h
